add text with strong and em tag

--- a/public/practices/01-text-manipulation-tag.html
+++ b/public/practices/01-text-manipulation-tag.html
@@ -18,5 +18,10 @@
     ข้อความต่าง ๆ ก็สามารถอยู่ได้โดยไม่มี TAG ครอบเช่นกัน แต่เราควรจะใช้ประโยชน์จาก TAG ต่าง ๆ มากกว่า
     <p>นอกจาก TAG สำหรับหัวข้อกับข้อความแล้ว ยังมี TAG ช่วยต่าง ๆ เช่น TAG strong ที่จะทำให้ <strong>ข้อความที่ถูกครอบกลายเป็นตัวหนา</strong></p>
     <p>TAG em ที่ทำให้<em>ข้อความที่ถูกครอบเป็นตัวเอียง</em></p>
+    <p>
+      <strong>
+        <em>ข้อความที่หนาและเอียง</em>
+      </strong>
+    </p>
   </body>
 </html>
