--- a/public/index.html
+++ b/public/index.html
@@ -6,5 +6,31 @@
     <h1>Peerapong Maitriwong (Field)</h1>
     <h2>พีรพงษ์ ไมตรีวงษ์​ (ฟิวส์)</h2>
     <p>เอก <strong>พัฒนาเกม</strong></p>
+
+    <ul>
+      <li>เอก ดิจิตอล</li>
+      <li>เอก เกม</li>
+      <li>เอก แพทย์</li>
+    </ul>
+
+    <ol>
+      <li>นอน</li>
+      <li>นอน</li>
+      <li>นอน</li>
+    </ol>
+
+    <h1>โครงการร่วมบริหารลักสูตรฯ</h1>
+    <ol>
+      <li>
+        เทคโนโลยีมีเดีย
+        <ol>
+          <li>ดิจิตอลมีเดีย</li>
+          <li>พัฒนาเกม</li>
+          <li>ชีวการแพทย์</li>
+        </ol>
+      </li>
+      <li>มีเดียอาตส์</li>
+      <li>มีเดียชีวการแพทย์และวิทยาศาสตร์</li>
+    </ol>
   </body>
 </html>
