change content in public/index.html

--- a/public/index.html
+++ b/public/index.html
@@ -1,36 +1,26 @@
 <html>
   <head>
+    <title>Creative Technology Camp</title>
     <meta charset="utf-8" />
   </head>
   <body>
-    <h1>Peerapong Maitriwong (Field)</h1>
-    <h2>พีรพงษ์ ไมตรีวงษ์​ (ฟิวส์)</h2>
-    <p>เอก <strong>พัฒนาเกม</strong></p>
+    <h1>ค่าย Creative Technology Camp ครั้งที่ 1</h1>
+    <p>
+      เป็นค่ายสำหรับนักศึกษาที่ต้องการหาความรู้เพิ่มเติม<br/>
+      จัดโดยนักศึกษาภาควิชา <strong>เทคโนโลยีมีเดีย</strong>
+    </p>
 
+    <h3>สาขาที่เปิด</h3>
+    <ol>
+      <li>Game</li>
+      <li>Maya</li>
+      <li>Web</li>
+    </ol>
+
+    <h3>รายชื่อนักศึกษาที่เข้าร่วม</h3>
     <ul>
-      <li>เอก ดิจิตอล</li>
-      <li>เอก เกม</li>
-      <li>เอก แพทย์</li>
+      <li>นาย ...</li>
+      <li>นางสาว ...</li>
     </ul>
-
-    <ol>
-      <li>นอน</li>
-      <li>นอน</li>
-      <li>นอน</li>
-    </ol>
-
-    <h1>โครงการร่วมบริหารลักสูตรฯ</h1>
-    <ol>
-      <li>
-        เทคโนโลยีมีเดีย
-        <ol>
-          <li>ดิจิตอลมีเดีย</li>
-          <li>พัฒนาเกม</li>
-          <li>ชีวการแพทย์</li>
-        </ol>
-      </li>
-      <li>มีเดียอาตส์</li>
-      <li>มีเดียชีวการแพทย์และวิทยาศาสตร์</li>
-    </ol>
   </body>
 </html>
